2010-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (RenderCollection): Use some temp vars to
	help make the code more readable as well as avoiding duplicate
	calculations.

2010-06-23  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* template.h:
	* control.cpp:
	* template.cpp:
	* frameworkelement.h:
	* frameworkelement.cpp: Make the template expansion methods
	  all take a MoonError* argument and append "WithError" to the
	  function names. This fixes some of the exception propagation
	  issues in drt 350.

2010-06-22  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (OnPropertyChanged): Use if-else branching
	like every other implementation. Also moved non-MSI check to the
	top.
	(qtree_lookup): Precalculate pow2 (l) so we don't have to
	calculate it multiple times in some of the conditions.
	(qtree_new): Use GSlice
	(qtree_destroy): use g_slice_free().
	(ctor): Init member vars in the body of the ctor, and make sure to
	init all of them.

2010-06-22  Alan McGovern  <amcgovern@novell.com>

	* deployment.cpp: Fix the build when not using OBJECT_TRACKING

2010-06-22  Alan McGovern  <amcgovern@novell.com>

	* deployment.cpp: Add some more useful output to ReportLeaks
	  so we can see the number of leaked objects grouped by type.
	  We also now print out the leak report multiple times so we
	  can see the number of 'leaked' objects before disposing the
	  mono runtime and after disposing it. This allows us to
	  trivially see objects which have been kept alive longer than
	  they should've been.

2010-06-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-ffmpeg.cpp: Signal the wait_mutex too when shutting down the ffmpeg
	thread, fixes #97 when building with ffmpeg support.

2010-06-22  Andreia Gaita  <avidigal@novell.com>

	* network-curl.cpp: activate ssl soft check (host/ip only, no
	  local certificates yet)

2010-06-21  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (qtree_insert): Use qtree_new(). Also